1.20.6 Fixes, bugs still exist